test/resources/parser/failing/zomtest9.scala
object MultilineString {
  "This string spans
   multiple lines"
}